<?xml version="1.0"?>
<package format="2">
  <name>localize</name>
  <version>0.0.0</version>
  <description>The localize package</description>
  <maintainer email="hyojeonk@usc.edu">hyojeong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
